--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -87,3 +87,49 @@ header input[type="text"] {
   border-radius: 5px;
   margin-left: 20px;
 }
+
+/* Propiedades del modal  */
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 1000px; 
+  display: flex;
+}
+
+
+.modal-info{
+  margin:10% auto;
+  padding: 20px;
+
+}
+
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
