--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,54 +1,94 @@
-/*  */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  background-image: url(/fotos/fondo-papel-tapiz-colorido-borroso-artistico\(1\).jpg);
+  background-repeat: repeat-y;
+  color: white;
+}
+
 .movies-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
+
 li {
   list-style-type: none;
 }
 
 .movie-card {
-  width: calc(25% - 20px); /* Фіксована висота карточки */
-  margin: 10px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 320.151px;
+  flex-shrink: 0;
+  border-radius: 20px;
+  border: 1px solid #969696;
   overflow: hidden;
   display: inline-block;
   vertical-align: top;
   box-sizing: border-box;
+  margin-bottom: 20px; 
 }
 
 .movie-card img {
   width: 100%;
   height: auto;
-  border-radius: 8px 8px 0 0;
+  border-radius: 20px 20px 0 0; 
 }
 
 .movie-card .movie-info {
-  padding: 10px;
-  background-color: #f9f9f9;
+  background-color: #5c005c;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(116, 3, 182, 0.1);
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  flex-direction: column; 
+  padding: 20px;
 }
 
 .movie-card h2 {
   margin: 0;
   font-size: 18px;
   font-weight: bold;
+  color: white;
 }
 
 .movie-card p {
-  height: 80px;
-  overflow-y: auto;
-  margin: 0;
+  font-size: 16px; 
+  color: #ffffff; 
+  margin-bottom: 5px;
 }
 
 header {
-  background-color: #333;
-  color: white;
-  padding: 10px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  position: relative;
+  background-image: url("/fotos//txaloka\(3\).png");
+  background-size: cover;
+  background-position: center;
+  z-index: 2; 
+  padding: 20px;
+  min-height: 200px;
+  font-size: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.header-photo {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 nav ul {
@@ -70,7 +110,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  background-color: #555;
+  background-color: #7a0467;
   border-radius: 5px;
 }
 
@@ -90,4 +130,16 @@ header input[type="text"] {
 
 #default-image {
   display: none; /* Початково приховуємо зображення за замовчуванням */
+}
+.button {
+  background-color: #ec5cff;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.button:hover {
+  background-color: #6d08b1;
 }
