--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,41 @@
   padding: 0;
   box-sizing: border-box;
 }
+.header  {
+  padding-top: 20px;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  width: 100%; }
+
+#search-input, #genre-filter {
+  flex-grow: 1; 
+  margin-right: 10px; 
+}
+
+#genre-filter {
+  flex-grow: 0.5; 
+}
+
+.bottom-row {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 20px; 
+}
+
+h2 {
+  margin-top: 20px; 
+  margin-left: 10px; 
+}
+
+
+.container-wrapper {
+  margin-top: 40px;
+}
 
 body {
   font-family: "Poppins", sans-serif;
@@ -12,6 +47,38 @@ body {
   background-repeat: repeat-y;
   color: white;
 }
+.container {
+  display: flex;
+  align-items: center;
+  width: 100%; }
+
+#search-input, #genre-filter {
+  flex-grow: 1; 
+  margin-right: 10px; 
+}
+
+#genre-filter {
+  flex-grow: 0.5; 
+}
+
+.bottom-row {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 20px; 
+}
+
+h2 {
+  margin-top: 20px; 
+  margin-left: 90px; 
+  margin-bottom: 20px;
+}
+
+
+.container-wrapper {
+  margin-top: 40px; }
+
 
 .movies-container {
   display: flex;
