--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,15 +12,22 @@
 .container {
   display: flex;
   align-items: center;
-  width: 100%; }
-
-#search-input, #genre-filter {
-  flex-grow: 1; 
-  margin-right: 10px; 
+  width: 100%; 
+}
+  #search-input,#genre-filter  {
+    flex-grow: 1; 
+    margin-right: 10px;
+    margin-left: 10px;
+    border-radius: 20px; 
+    padding: 10px; 
+    border: 1px solid #ccc; 
+    box-sizing: border-box; 
 }
 
+
 #genre-filter {
-  flex-grow: 0.5; 
+    flex-grow: 0.5; 
+
 }
 
 .bottom-row {
@@ -32,8 +39,9 @@
 }
 
 h2 {
-  margin-top: 20px; 
-  margin-left: 10px; 
+
+  margin: 20px; 
+  width: 100%;
 }
 
 
@@ -69,12 +77,6 @@ body {
   margin-top: 20px; 
 }
 
-h2 {
-  margin-top: 20px; 
-  margin-left: 90px; 
-  margin-bottom: 20px;
-}
-
 
 .container-wrapper {
   margin-top: 40px; }
@@ -101,7 +103,10 @@ li {
   display: inline-block;
   vertical-align: top;
   box-sizing: border-box;
-  margin-bottom: 20px; 
+  margin-bottom: 10px; 
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .movie-card img {
@@ -163,7 +168,7 @@ header {
 
 nav ul {
   list-style-type: none;
-  padding: 0;
+  padding: 0 0 0 20px;
   margin: 0;
 }
 
@@ -221,7 +226,7 @@ button{
   transition: background-color 0.3s ease;
 }
 
-.favoriteButton{
+.modalButton{
   position: relative; 
   /* bottom: 0; 
   left: 0;   */
@@ -280,6 +285,14 @@ button:hover {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+#favorites-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
 }
 
 .modal-button {
